Basic ranking support
Signed-off-by: Russell Currey <ruscur@russell.cc>

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -5,7 +5,10 @@
 	    src="https://code.jquery.com/jquery-3.1.1.min.js"
 	    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
 	    crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script
+	    src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+	    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+	    crossorigin="anonymous"></script>
 	<title>swagladder</title>
     </head>
     <body>
@@ -79,7 +82,7 @@
 		<tbody>
 		    {{#each players}}
 			<tr>
-			    <td>1</td>
+			    <td>{{rank}}</td>
 			    <td>{{name}}</td>
 			    <td>{{rating}}</td>
 			    <td>{{games}}</td>
