--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -51,8 +51,9 @@
 		    </form>
 		    <ul class="nav navbar-nav navbar-right">
 			<li><a href="#">Link</a></li>
+			{{#if user.id}}
 			<li class="dropdown">
-			    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+			    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{user.id}}<span class="caret"></span></a>
 			    <ul class="dropdown-menu">
 				<li><a href="#">Action</a></li>
 				<li><a href="#">Another action</a></li>
@@ -61,6 +62,9 @@
 				<li><a href="#">Separated link</a></li>
 			    </ul>
 			</li>
+			{{else}}
+			<li><a href="login">Login</a></li>
+			{{/if}}
 		    </ul>
 		</div><!-- /.navbar-collapse -->
 	    </div><!-- /.container-fluid -->
